--- a/iziozi/src/main/res/values-it/strings.xml
+++ b/iziozi/src/main/res/values-it/strings.xml
@@ -252,6 +252,12 @@
     <string name="no_images">Nessuna immagine trovata!</string>
     <string name="create_pdf">Crea pdf</string>
     <string name="done">Fatto</string>
+    <string name="recreate">Ricreare</string>
+    <string name="search_no_words">Devi selezionare almeno una parola per iniziare la ricerca.</string>
+    <string name="speech_search_info">Seleziona le parole che vuoi mantenere.
+        \n\nPuoi selezionare ricreare per ripetere il processo del dettato oppure fatto per iniziare la ricerca.</string>
+    <string name="select_all">Seleziona tutto</string>
+    <string name="speech_board_error">Devi prima abilitare la modalita\' modifica.</string>
 
 
 </resources>
