upgrade data structure to json

--- a/iziozi/src/main/res/values-es/strings.xml
+++ b/iziozi/src/main/res/values-es/strings.xml
@@ -52,4 +52,6 @@
     <string name="lock">Bloquear</string>
     <string name="unlock">Desbloquear</string>
 
+    <string name="upgrade_in_progress">Upgrade in progress...</string>
+
 </resources>
