--- a/iziozi/src/main/res/values-it/strings.xml
+++ b/iziozi/src/main/res/values-it/strings.xml
@@ -260,5 +260,6 @@
     <string name="select_all">Seleziona tutto</string>
     <string name="speech_board_error">Devi prima abilitare la modalita\' modifica.</string>
 
+    <string name="upgrade_in_progress">Aggiornamento in corso...</string>
 
 </resources>
