--- a/iziozi/src/main/res/values-de/strings.xml
+++ b/iziozi/src/main/res/values-de/strings.xml
@@ -53,4 +53,6 @@
     <string name="lock">Sperren</string>
     <string name="unlock">Entsperren</string>
 
+    <string name="upgrade_in_progress">Upgrade in progress...</string>
+
 </resources>
