--- a/iziozi/src/main/res/values/strings.xml
+++ b/iziozi/src/main/res/values/strings.xml
@@ -269,4 +269,5 @@
     <string name="select_all">Select all</string>
     <string name="speech_board_error">You must first enable edit mode.</string>
 
+    <string name="upgrade_in_progress">Upgrade in progress...</string>
 </resources>
