structure refactoring + package creation

--- a/iziozi/src/main/res/values-de/strings.xml
+++ b/iziozi/src/main/res/values-de/strings.xml
@@ -54,5 +54,6 @@
     <string name="unlock">Entsperren</string>
 
     <string name="upgrade_in_progress">Upgrade in progress...</string>
+    <string name="export">Export</string>
 
 </resources>
