--- a/iziozi/src/main/res/values-fr/strings.xml
+++ b/iziozi/src/main/res/values-fr/strings.xml
@@ -55,5 +55,6 @@
     <string name="unlock">Ouvrir</string>
 
     <string name="upgrade_in_progress">Upgrade in progress...</string>
+    <string name="export">Export</string>
 
 </resources>
