--- a/iziozi/src/main/res/values-fr/strings.xml
+++ b/iziozi/src/main/res/values-fr/strings.xml
@@ -56,5 +56,7 @@
 
     <string name="upgrade_in_progress">Upgrade in progress...</string>
     <string name="export">Export</string>
+    <string name="export_error">An unexpected error has occurred during the board export!</string>
+    <string name="export_share_msg">Share board using:</string>
 
 </resources>
