--- a/iziozi/src/main/res/values/strings.xml
+++ b/iziozi/src/main/res/values/strings.xml
@@ -144,7 +144,7 @@
 
     <!-- Hint Alert -->
     <string name="welcome">Welcome</string>
-    <string name="welcome_text">Welcome in IziOzi! To setup a new button, i\'m gonna enable the edit mode! Tap on any button to begin the configuration. When you have finished, disable the edit mode, lock the user interface in the menu and you\'re ready! To get more info, please refer to www.iziozi.org!</string>
+    <string name="welcome_text">Welcome in IziOzi! To setup a new button, i\'m gonna enable the edit mode! Tap on any button to begin the configuration. When you have finished, disable the edit mode, lock the user interface in the menu and you\'re ready! To get more info, please refer to iziozi.martinolessio.com!</string>
 
     <!-- TTS strings -->
     <string name="tts_ready">I\'m ready to speak on your behalf!</string>
@@ -273,4 +273,7 @@
     <string name="export">Export</string>
     <string name="export_error">An unexpected error has occurred during the board export!</string>
     <string name="export_share_msg">Share board using:</string>
+
+    <string name="permission_error">The application can\'t run properly if you don\'t grant all the permissions.</string>
+    <string name="grant">Grant</string>
 </resources>
